Finalizacion de las animaciones

--- a/Views/nosotros.html
+++ b/Views/nosotros.html
@@ -64,7 +64,8 @@
                 <p class="textoPresentacion">¿Querés formar parte de la transformación ambiental y ser parte de la mitigación del cambio climatico y las consecuencias de las emisiones de gases? comprá nuestros productos!</p>
             </div>
             <div id="but" >
-                <a href="productos.html" ><button class="button" >COMPRAR</button></a>
+                <!-- <a href="productos.html" ><button class="button" >COMPRAR</button></a> -->
+                <button class="boton cuatro"><span>COMPRAR</span></button>
             </div>
         </div>
         <div class="presentacionGrid2 bgcNos">
