--- a/Views/productos.html
+++ b/Views/productos.html
@@ -129,7 +129,8 @@
                     <input type="checkbox" id="añadir9">
                 </fieldset>
             </div>
-            <button class="button">COMPRAR</button>
+            <!-- <button class="button">COMPRAR</button> -->
+            <button class="boton cuatro"><span>COMPRAR</span></button>
         </form>
     </main>
     <!--ends main-->
