--- a/Views/compras.html
+++ b/Views/compras.html
@@ -94,7 +94,8 @@
                     <input type="date" name="fecha" id="fecha" min="2022-06-1" required>
 
                 </fieldset>
-                <button class="button" id="but">Realizar pedido</button>
+                <!-- <button class="button" id="but">Realizar pedido</button> -->
+                <button class="boton cuatro"><span>Realizar pedido!</span></button>
             </form>
         </section>
     </main>
