--- a/Views/contacto.html
+++ b/Views/contacto.html
@@ -57,7 +57,8 @@
                         <input type="email" name="correo" id="correo">
                         <label for="msg" class="textoProducto">Mensaje</label>
                         <input type="text" id="msg" placeholder="Dejanos tu mensaje aquí">
-                        <button class="button" id="but">Enviar</button>
+                        <!-- <button class="button" id="but">Enviar</button> -->
+                        <button class="boton cuatro"><span>Enviar</span></button>
                     </form>
                 </div>
             </div>
