--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ header{
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	z-index: 3;
 }
 
 nav ul{
@@ -520,4 +521,63 @@ width: 100%;
 	width: 8%;
 	margin: 15px auto;
 
+}
+
+/*----Botones animados-----*/
+
+.boton {
+	display:flex;
+    margin: auto;
+	align-items: center;
+	justify-content: center;
+    padding: 5px 20px;
+	width: auto;
+	height: 4rem;
+	background: bisque;
+	color: #000;
+	font-family: 'Roboto', sans-serif;
+	font-size: 20px;
+	font-weight: 500;
+	border: none;
+	cursor: pointer;
+	text-transform: uppercase;
+	transition: .3s ease all;
+	border-radius: 25px;
+	position: relative;
+	overflow: hidden;
+    border: solid 1px black;
+    margin-top: 2.5rem;
+}
+
+.boton span {
+	position: relative;
+	z-index: 2;
+	transition: .3s ease all;
+}
+
+.boton.cuatro::after {
+	content: "";
+	width: 1px;
+	height: 1px;
+	background: none;
+	position: absolute;
+	/*top: 50%;
+	left: 50%;*/
+	transition: .3s ease-in-out all;
+	border-radius: 100px;
+	transform-origin: center;
+}
+
+.boton.cuatro:hover::after {
+	transform: scale(400);
+	background: rgb(82, 194, 82);
+}
+
+.boton.cuatro:hover {
+	/*background: #960909;*/
+}
+
+.producto img:hover{
+	width: 220px;
+	
 }
