--- a/css/style2.css
+++ b/css/style2.css
@@ -35,6 +35,7 @@ header{
 	top: 0px;
     text-align: center;
     height: 22.5rem;
+    z-index: 3;
 }
 
 nav ul{
@@ -152,13 +153,13 @@ nav ul{
 }
 
 .presentacion{
-	background-color: rgb(0, 109, 87);
+	background-color: rgb(0, 109, 87,);
 	border-radius: 15px;
 	display: flex;
     justify-content: center;
 	/* flex-direction: column; */
 	flex-wrap: wrap;
-	margin: 25px;
+	margin: auto;
 }
 
 .button{
@@ -221,6 +222,65 @@ nav ul{
     justify-content: center;
 }
 
+/*----Botones animados-----*/
+
+.boton {
+	display:flex;
+    margin: auto;
+	align-items: center;
+	justify-content: center;
+    padding: 5px 20px;
+	width: auto;
+	height: 4rem;
+	background: bisque;
+	color: #000;
+	font-family: 'Roboto', sans-serif;
+	font-size: 20px;
+	font-weight: 500;
+	border: none;
+	cursor: pointer;
+	text-transform: uppercase;
+	transition: .3s ease all;
+	border-radius: 25px;
+	position: relative;
+	overflow: hidden;
+    border: solid 1px black;
+    margin-top: 2.5rem;
+}
+
+.boton span {
+	position: relative;
+	z-index: 2;
+	transition: .3s ease all;
+}
+
+.boton.cuatro::after {
+	content: "";
+	width: 1px;
+	height: 1px;
+	background: none;
+	position: absolute;
+	/*top: 50%;
+	left: 50%;*/
+	transition: .3s ease-in-out all;
+	border-radius: 100px;
+	transform-origin: center;
+}
+
+.boton.cuatro:hover::after {
+	transform: scale(400);
+	background: rgb(82, 194, 82);
+}
+
+.boton.cuatro:hover {
+	/*background: #960909;*/
+}
+
+.producto img:hover{
+	width: 300px;
+
+}
+
 /* -----GRIDS----- */
 
 .gridIndex{
@@ -240,7 +300,7 @@ nav ul{
 
 .header{
     grid-area: head;
-    border: 4px solid black;
+    border-bottom: 4px solid black;
 }
 
 .main{
@@ -276,6 +336,7 @@ nav ul{
     "talk"
     "but";
 }
+    
 
 .formContacto{
 	width: 90%;
@@ -387,7 +448,7 @@ nav ul{
         padding: 0.5rem;
         text-decoration: none;
         font-size: 2.5rem;
-        display: flex
+        display: flex;
         justify-content: center;
     }
 
@@ -415,9 +476,10 @@ nav ul{
     
     .textoPresentacion{
         font-size: 2.5rem;
-        margin: 15px 45px;	
+        margin: 15px 45px
         padding: 15px;
         border-radius: 25px;
+        width: 87%;
     }
 
     .imgNos{
@@ -433,7 +495,7 @@ nav ul{
 
     .textoProducto{
         font-size: 2rem;
-    } 	
+    }
 
     .textoInfo{
         font-size: 2.5rem;
